--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-ros-noetic-jsk-recognition-msgs (1.2.17-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.2.17-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Mon, 13 Nov 2023 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (1.2.16-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.2.16-1buster) buster; urgency=high
 
   * [feature] VQA using Large-Scale Vision and Language model (#2730 <https://github.com/jsk-ros-pkg/jsk_recognition/issues/2730>)
     
@@ -38,31 +38,31 @@ ros-noetic-jsk-recognition-msgs (1.2.16-1focal) focal; urgency=high
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Thu, 09 Nov 2023 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (1.2.15-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.2.15-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Fri, 09 Oct 2020 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (1.2.14-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.2.14-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Thu, 08 Oct 2020 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (1.2.13-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.2.13-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 07 Oct 2020 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (1.2.12-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.2.12-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Fri, 02 Oct 2020 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (1.2.11-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.2.11-1buster) buster; urgency=high
 
   * Convert audio data to spectrogram (#2478 <https://github.com/jsk-ros-pkg/jsk_recognition/issues/2478>)
     
@@ -96,31 +96,31 @@ ros-noetic-jsk-recognition-msgs (1.2.11-1focal) focal; urgency=high
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 30 Sep 2020 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (1.2.10-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.2.10-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Tue, 26 Mar 2019 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (1.2.9-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.2.9-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Fri, 22 Feb 2019 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (1.2.8-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.2.8-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Thu, 21 Feb 2019 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (1.2.7-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.2.7-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 13 Feb 2019 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (1.2.6-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.2.6-1buster) buster; urgency=high
 
   * Install sample and test  into SHARE_DESTINATION (#2345 <https://github.com/jsk-ros-pkg/jsk_recognition/issues/2345>)
   * jsk_pcl_ros: support lazy mode for pointcloud_screenpoint nodelet (#2277 <https://github.com/jsk-ros-pkg/jsk_recognition/issues/2277>)p
@@ -129,37 +129,37 @@ ros-noetic-jsk-recognition-msgs (1.2.6-1focal) focal; urgency=high
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Thu, 01 Nov 2018 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (1.2.5-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.2.5-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Sun, 08 Apr 2018 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (1.2.4-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.2.4-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Thu, 11 Jan 2018 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (1.2.3-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.2.3-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 22 Nov 2017 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (1.2.2-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.2.2-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Sat, 22 Jul 2017 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (1.2.1-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.2.1-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Fri, 14 Jul 2017 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (1.2.0-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.2.0-1buster) buster; urgency=high
 
   * [ADD NEW MESSAGE] Add Object.msg, ObjectArray.msg to represent object property (#2148 <https://github.com/jsk-ros-pkg/jsk_recognition/issues/2148>)
     * Message to represent object property (Object.msg/ObjectArray.msg)
@@ -169,7 +169,7 @@ ros-noetic-jsk-recognition-msgs (1.2.0-1focal) focal; urgency=high
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Fri, 14 Jul 2017 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (1.1.3-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.1.3-1buster) buster; urgency=high
 
   * [jsk_perception] apply candidates node supports topic update (#2143 <https://github.com/jsk-ros-pkg/jsk_recognition/issues/2143>)
     * update Label msg API
@@ -186,7 +186,7 @@ ros-noetic-jsk-recognition-msgs (1.1.3-1focal) focal; urgency=high
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Thu, 06 Jul 2017 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (1.1.2-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.1.2-1buster) buster; urgency=high
 
   * [jsk_recognition_msgs] add segment messages. (#2047 <https://github.com/jsk-ros-pkg/jsk_recognition/issues/2047> )
   * Generate README by script (#2064 <https://github.com/jsk-ros-pkg/jsk_recognition/issues/2064> )
@@ -194,25 +194,25 @@ ros-noetic-jsk-recognition-msgs (1.1.2-1focal) focal; urgency=high
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Thu, 15 Jun 2017 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (1.1.1-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.1.1-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Fri, 03 Mar 2017 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (1.1.0-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.1.0-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 08 Feb 2017 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (1.0.4-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.0.4-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 08 Feb 2017 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (1.0.3-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.0.3-1buster) buster; urgency=high
 
   * Compute box overlap and publish it (#1993 <https://github.com/jsk-ros-pkg/jsk_recognition/issues/1993> )
     * add Accuracy.msg
@@ -220,31 +220,31 @@ ros-noetic-jsk-recognition-msgs (1.0.3-1focal) focal; urgency=high
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Tue, 07 Feb 2017 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (1.0.2-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.0.2-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 11 Jan 2017 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (1.0.1-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.0.1-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Mon, 12 Dec 2016 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (1.0.0-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (1.0.0-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Sun, 11 Dec 2016 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.29-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.29-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Sat, 29 Oct 2016 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.28-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.28-1buster) buster; urgency=high
 
   * [Major Release] Copy jsk_pcl_ros/srv and  jsk_perception/srv files to jsk_recognition_msgs (#1914 <https://github.com/jsk-ros-pkg/jsk_recognition/issues/1914> )
   * Copy deprecated srv files to jsk_recognition_msgs
@@ -257,86 +257,86 @@ ros-noetic-jsk-recognition-msgs (0.3.28-1focal) focal; urgency=high
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Fri, 28 Oct 2016 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.27-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.27-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Fri, 28 Oct 2016 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.26-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.26-1buster) buster; urgency=high
 
   * Apply context to label probability (#1901 <https://github.com/jsk-ros-pkg/jsk_recognition/issues/1901>)
   * Contributors: Kentaro Wada
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 26 Oct 2016 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.25-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.25-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Thu, 15 Sep 2016 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.24-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.24-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 14 Sep 2016 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.23-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.23-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Tue, 13 Sep 2016 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.22-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.22-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Mon, 12 Sep 2016 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.21-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.21-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Thu, 14 Apr 2016 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.20-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.20-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 13 Apr 2016 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.19-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.19-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Mon, 21 Mar 2016 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.18-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.18-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Sun, 20 Mar 2016 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.17-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.17-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Sat, 19 Mar 2016 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.16-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.16-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 10 Feb 2016 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.15-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.15-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Mon, 08 Feb 2016 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.14-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.14-1buster) buster; urgency=high
 
   * [jsk_perception] BoundingBoxToRectArray and rect_array_to_image_marker.py
   * [jsk_pcl_ros] Publish current tracking status (running or idle)
@@ -348,13 +348,13 @@ ros-noetic-jsk-recognition-msgs (0.3.14-1focal) focal; urgency=high
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 03 Feb 2016 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.13-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.13-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Fri, 18 Dec 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.12-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.12-1buster) buster; urgency=high
 
   * [jsk_pcl_ros_utils] Introduce new package called jsk_pcl_ros_utils
     in order to speed-up compilation of jsk_pcl_ros
@@ -362,26 +362,26 @@ ros-noetic-jsk-recognition-msgs (0.3.12-1focal) focal; urgency=high
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Fri, 18 Dec 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.11-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.11-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Thu, 17 Dec 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.10-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.10-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 16 Dec 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.9-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.9-1buster) buster; urgency=high
 
   * [jsk_perception] Add PolygonArrayColorHistogram
   * Contributors: Ryohei Ueda
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Sun, 13 Dec 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.8-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.8-1buster) buster; urgency=high
 
   * [jsk_pcl_ros] Add Failure flag to Torus message
   * Remove types on docs for jsk_pcl_ros
@@ -390,7 +390,7 @@ ros-noetic-jsk-recognition-msgs (0.3.8-1focal) focal; urgency=high
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Mon, 07 Dec 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.7-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.7-1buster) buster; urgency=high
 
   * Merge pull request #1276 <https://github.com/jsk-ros-pkg/jsk_recognition/issues/1276> from mmurooka/add-octomap-contact
     [jsk_pcl_ros] Add octomap contact
@@ -404,49 +404,49 @@ ros-noetic-jsk-recognition-msgs (0.3.7-1focal) focal; urgency=high
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 18 Nov 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.6-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.6-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Thu, 10 Sep 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.5-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.5-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Tue, 08 Sep 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.4-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.4-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Sun, 06 Sep 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.3-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.3-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Sat, 05 Sep 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.2-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.2-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Fri, 04 Sep 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.1-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.1-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Thu, 03 Sep 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.3.0-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.3.0-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Thu, 03 Sep 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.2.18-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.2.18-1buster) buster; urgency=high
 
   * [jsk_recognition_msgs] Add script to convert
     jsk_recognition_msgs/PlotData into csv
@@ -455,7 +455,7 @@ ros-noetic-jsk-recognition-msgs (0.2.18-1focal) focal; urgency=high
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Thu, 03 Sep 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.2.17-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.2.17-1buster) buster; urgency=high
 
   * [jsk_recognition_msgs/PolygonArray] Add lebels and likelihood for
     colorizing on rviz
@@ -463,19 +463,19 @@ ros-noetic-jsk-recognition-msgs (0.2.17-1focal) focal; urgency=high
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Thu, 20 Aug 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.2.16-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.2.16-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Tue, 18 Aug 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.2.15-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.2.15-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Mon, 17 Aug 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.2.14-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.2.14-1buster) buster; urgency=high
 
   * [jsk_recognition_msgs] Add value field to BoundingBox to represent likelihood
   * [jsk_recognition_msgs] HistogramWithRange message to represent rich histogram
@@ -486,7 +486,7 @@ ros-noetic-jsk-recognition-msgs (0.2.14-1focal) focal; urgency=high
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 12 Aug 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.2.13-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.2.13-1buster) buster; urgency=high
 
   * [jsk_perception] Use ImageDifferenceValue.msg instead of Float32Stamped.msg
   * [jsk_recognition_msgs] Add Float32Stamped.msg
@@ -494,26 +494,26 @@ ros-noetic-jsk-recognition-msgs (0.2.13-1focal) focal; urgency=high
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 10 Jun 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.2.12-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.2.12-1buster) buster; urgency=high
 
   * JSK Recognition Msg for handling Array of 2D Rects
   * Contributors: iKrishneel
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Sun, 03 May 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.2.11-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.2.11-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Sun, 12 Apr 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.2.10-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.2.10-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 08 Apr 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.2.9-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.2.9-1buster) buster; urgency=high
 
   * 0.2.8
   * Update Changelog
@@ -521,38 +521,38 @@ ros-noetic-jsk-recognition-msgs (0.2.9-1focal) focal; urgency=high
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Sat, 28 Mar 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.2.8-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.2.8-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Sat, 28 Mar 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.2.7-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.2.7-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 25 Mar 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.2.6-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.2.6-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Tue, 24 Mar 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.2.5-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.2.5-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Mon, 16 Mar 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.2.4-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.2.4-1buster) buster; urgency=high
 
   * [jsk_recognition_msgs] Add resolution to SimpleOccupancyGrid
   * Contributors: Ryohei Ueda
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Sat, 07 Mar 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.2.3-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.2.3-1buster) buster; urgency=high
 
   * add CATKIN_DEPENDS
   * [jsk_recognition_msgs] Add new message for occupancy grid for more
@@ -561,225 +561,225 @@ ros-noetic-jsk-recognition-msgs (0.2.3-1focal) focal; urgency=high
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Sun, 01 Feb 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.2.2-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.2.2-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Thu, 29 Jan 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.2.1-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.2.1-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Thu, 29 Jan 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.2.0-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.2.0-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 28 Jan 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.34-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.34-1buster) buster; urgency=high
 
   * [jsk_pcl_ros, jsk_perception] Use jsk_recognition_msgs
   * Contributors: Ryohei Ueda
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 28 Jan 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.33-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.33-1buster) buster; urgency=high
 
   * [jsk_recognition_msgs] Add jsk_recognition_msgs
   * Contributors: Ryohei Ueda
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Fri, 23 Jan 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.32-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.32-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Sun, 11 Jan 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.31-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.31-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 07 Jan 2015 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.30-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.30-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 24 Dec 2014 07:45:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.29-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.29-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 24 Dec 2014 03:43:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.28-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.28-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Tue, 16 Dec 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.27-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.27-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Mon, 08 Dec 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.26-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.26-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Sat, 22 Nov 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.25-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.25-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Thu, 20 Nov 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.24-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.24-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Fri, 14 Nov 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.23-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.23-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 08 Oct 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.22-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.22-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Tue, 23 Sep 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.21-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.21-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Fri, 19 Sep 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.20-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.20-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Tue, 16 Sep 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.19-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.19-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Sun, 14 Sep 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.18-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.18-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Fri, 12 Sep 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.17-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.17-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Sat, 06 Sep 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.16-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.16-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 03 Sep 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.15-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.15-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Mon, 25 Aug 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.14-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.14-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Thu, 31 Jul 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.13-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.13-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Mon, 28 Jul 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.12-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.12-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 23 Jul 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.11-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.11-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Mon, 07 Jul 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.10-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.10-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Sun, 06 Jul 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.9-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.9-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Mon, 30 Jun 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.8-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.8-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Sat, 28 Jun 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.7-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.7-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Fri, 30 May 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.6-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.6-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Thu, 29 May 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.5-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.5-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Wed, 28 May 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.4-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.4-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Thu, 24 Apr 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.3-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.3-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Fri, 11 Apr 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.2-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.2-1buster) buster; urgency=high
 
 
 
  -- Ryohei Ueda <ueda@jsk.t.u-tokyo.ac.jp>  Thu, 10 Apr 2014 15:00:00 -0000
 
-ros-noetic-jsk-recognition-msgs (0.1.1-1focal) focal; urgency=high
+ros-noetic-jsk-recognition-msgs (0.1.1-1buster) buster; urgency=high
 
 
 
